istio/peer-authentication-backend.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: backend-strict
  namespace: backend
spec:
  mtls:
    mode: STRICT
