istio/grafana-virtualservice.yaml
# istio/grafana-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: backend # Same namespace with the Gateway/Apps
spec:
  hosts:
  - "*"
  gateways:
  - rootsnwings-gateway
  http:
  - match:
    - uri:
        prefix: /grafana
    rewrite:
      uri: /
    route:
    - destination:
        host: grafana.istio-system.svc.cluster.local # FQDN to grafana service in its namespace
        port:
          number: 3000
